@@ -73,7 +73,8 @@ dnl Advanced network address translating functions
 AC_CHECK_FUNCS(inet_pton inet_ntop)
 
 dnl Support BSD4.4 "sa_len" extension when calculating sockaddrs arrays
-AC_CHECK_MEMBERS(struct sockaddr.sa_len, , , [#include <sys/socket.h>])
+AC_CHECK_MEMBERS(struct sockaddr.sa_len, , , [#include <sys/types.h>
+#include <sys/socket.h>])
 
 dnl Check if it is available the RFC2292 IPv4 extension
 AC_CHECK_TYPES(struct in_pktinfo, , , [#include <netinet/in.h>])
